<resources>
    <string name="app_name">STRING</string>
    <string name="skip">Skip</string>
    <string name="btn_next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro1">Intro1</string>
    <string name="get_inspired_by_your">Get inspired by your \npersonalised feed</string>
    <string name="str_intro1">Discover places that revolves around your
        \ninterests and social network. Save the ones that
        \ncall out to you strongly and organise them nicely
        \ninto your itineraries at a later time.</string>
    <string name="str_tt_intro2">Travel planning made
        \nseamless and enjoyable</string>
    <string name="str_intro2">String an itinerary from a fellow Stringer and
        \ncontinue to personalise it from there; Add new
        \nplaces that you\'ve discovered and remove those
        \nthat do not appeal to you.</string>
    <string name="tt_intro3">Share experiences and be
        \npart of the String community</string>
    <string name="str_intro3">If you benefited from itineraries that you\'ve
        \nstrung, share the love; Contribute and share your
        \npersonal experiences and feedback with fellow
        \nStringers, as you learn from them too. After all,
        \ncommunity is unity!</string>
    <string name="str_login">Discover the Endless
        \nPossibilities of Travel</string>
    <string name="sign_up_with_email">Sign Up with email</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="button_back">Button back</string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Enter your email address</string>
    <string name="name">Name</string>
    <string name="hint_edt_name">Enter your name (optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="hint_edt_birthday">Enter date of birth</string>
    <string name="username">Username</string>
    <string name="hint_edt_user_name">Enter a usename</string>
    <string name="password">Password</string>
    <string name="hint_edt_password">Enter a password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_edt_confirm_password">Enter password again</string>
    <string name="email">Email</string>
    <string name="agree_term">I have read and agree to String\'s</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sign_up">Sign up</string>
    <string name="tv_already_have_acc">Already have an account?</string>
    <string name="content_register_facebook">Thank you for signing up for a String account!
        \nPlease provide your particulars below.</string>
    <string name="done">Done</string>
    <string name="with_facebook">With facebook</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="mail">Mail</string>
    <string name="mail_verify">A verification email has been sent to:
    \n<b>%1$s</b>
    \n\nCheck your email and click on the verification link
    \nto activate your account.</string>
    <string name="open_mail_app">Open Mail App</string>
    <string name="resend_email">Resend Email</string>
    <string name="txt_forgot_password">Enter your email address below and follow the
        \ninstructions in the email we\'ll send you.</string>
    <string name="select_interests">Select Interests</string>
    <string name="_3_more">%1$d more</string>
    <string name="txt_interest">Select at least 3 tags that represents your \ninterests</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="txt_header_notification_push">Be in the know whenever you
        \nreceive messages, new followers
        \nand more</string>
    <string name="okay">Okay</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="turn_on_location_service">Turn on Location Service</string>
    <string name="notification_location">Share your location to help us find the best places near you</string>
    <string name="turn_on_wanderlust_mode">Turn On Wanderlust Mode</string>
    <string name="str_dialog_profile">Let your followers know that you\'re on a trip
        \nright now. We\'ll show interesting places around
        \nyou on your feed.</string>
    <string name="hint_location">Enter Location</string>
    <string name="wandalust">Wandalust</string>
    <string name="txtBio">Proud coffee fanatic. Wannabe
        \ninternet trailblazer. Pop cultureaholic.
        \nBeer maven.</string>
    <string name="txtWeb">http://uniquely65.com</string>
    <string name="_2_129">2,129</string>
    <string name="post">POSTS</string>
    <string name="save">SAVES</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="itineraries">ITINERARIES</string>
    <string name="no_posts">No Posts</string>
    <string name="txt_no_post">Post photos or videos to share your trip
        \nexperiences</string>
    <string name="create_new_itinerary">Create New Itinerary</string>
    <string name="create_new_post">Create New Post</string>
    <string name="no_itineraries">No Itineraries</string>
    <string name="txtNoItine">Use itineraries to add and organise
        \nplaces or interest for upcoming travel
        \nplans or curation purposes</string>
    <string name="no_saves">No Saves</string>
    <string name="tvNoSaves">Saved posts will appear here</string>
    <string name="edit_post">Edit Post</string>
    <string name="share_to">Share to…</string>
    <string name="copy_link">Copy Link</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="txt_modal_delete">Are you sure you want to delete this
        \npost permanently?</string>
    <string name="cancel">Cancel</string>
    <string name="culture">Culture</string>
    <string name="image_item">Image item</string>
    <string name="message_login">Message login</string>
    <string name="err_username_not_valid">Enter a valid username</string>
    <string name="err_email_not_valid">Enter a valid email</string>
    <string name="err_pw_not_match">Password does not match</string>
    <string name="err_pw_not_valid">Password is too short (Minimum is 6 characters)</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="success">Success</string>
    <string name="email_has_been_sent">Email has been sent.</string>
    <string name="ok">OK</string>
    <string name="_30">30</string>
    <string name="checkbox">Checkbox</string>
    <string name="txt_follow">Add some suggested users from the comunity</string>
    <string name="follow">Follow</string>
    <string name="un_follow">UnFollow</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_app_with_frieds">Share App with Frieds</string>
    <string name="follow_us_on_facebook">Follow Us on Facebook</string>
    <string name="follow_us_on_instagram">Follow Us on Instagram</string>
    <string name="account">Account</string>
    <string name="my_interests">My Interests</string>
    <string name="account_details">Account Details</string>
    <string name="change_password">Change Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="blocked_accounts">Blocked Accounts</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="arrow">Arrow</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="version">Version %1$s</string>
    <string name="errConnection">No internet connection</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="bio">Bio</string>
    <string name="website">Website</string>
    <string name="hintBio">Enter a description</string>
    <string name="hintWebsite">Enter your website</string>
    <string name="private_information">Private Information</string>
    <string name="_150">150</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="text_no_internet">Seems like you\'re offline.
        \nPlease check your internet connection.</string>
    <string name="feed_is_empty">Feed is empty</string>
    <string name="reload_page">Reload Page</string>
    <string name="follow_people">Follow People</string>
    <string name="error">Error</string>
    <string name="errLogin">You are logged another device!</string>
    <string name="save1">Save</string>
    <string name="time_feed">15 secs ago</string>
    <string name="location">Location</string>
    <string name="image_post">Image post</string>
    <string name="icon_like">Icon like</string>
    <string name="icon_comment">Icon comment</string>
    <string name="icon_show_more_feed">Icon show more feed</string>
    <string name="string">String</string>
    <string name="report">Report</string>
    <string name="description">Description</string>
    <string name="current_per_page_image">%1$d/%2$d</string>
    <string name="time_duration">0:59</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="postBtn">Post</string>
    <string name="no_cmt">No comments</string>
    <string name="txtNoCmt">Be the first to write a comment or
        \nshare some feedback</string>
    <string name="reply">Reply</string>
    <string name="edit">Edit</string>
    <string name="textConfirmDelCmt">Are you sure you want to delete this
        \ncomment permanently</string>
</resources>
