<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_feed"
        android:contentDescription="@string/feed"
        android:icon="@drawable/home_selector"
        android:title="@string/feed" />
    <item
        android:id="@+id/menu_search"
        android:contentDescription="@string/search"
        android:icon="@drawable/search_selector"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_add"
        android:contentDescription="@string/add"
        android:icon="@drawable/ic_share"
        android:title="@string/add" />
    <item
        android:id="@+id/menu-notification"
        android:contentDescription="@string/notification"
        android:icon="@drawable/notification_selector"
        android:title="@string/notification" />
    <item
        android:id="@+id/menu_profile"
        android:contentDescription="@string/profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />
</menu>