<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".features.intro.fragment.Intro1Fragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/intro1"
        android:src="@drawable/location" />

    <TextView
        style="@style/txtHeaderNormalGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal|top"
        android:text="@string/turn_on_location_service"
        android:textAllCaps="true" />

    <TextView
        style="@style/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin15"
        android:gravity="center_horizontal|top"
        android:text="@string/notification_location" />

    <Button
        android:id="@+id/btn_okay_notify_location"
        style="@style/txtWhiteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="@dimen/margin15"
        android:background="@drawable/ripple_button"
        android:backgroundTint="@color/colorPurple"
        android:text="@string/okay" />

    <TextView
        android:id="@+id/btn_notify_location_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin15"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/maybe_later"
        android:textAppearance="@style/txtTileNormal"
        android:textColor="@color/colorPurple" />

</LinearLayout>