<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/intro1"
        android:src="@drawable/ic_saves_empty" />

    <TextView
        style="@style/txtSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin15"
        android:gravity="center_horizontal|top"
        android:text="@string/no_saves"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        style="@style/txtHeaderBigGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin15"
        android:gravity="center_horizontal|top"
        android:text="@string/tvNoSaves" />

</LinearLayout>
